# xmu_assistant_sign_bot

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  generate_flamegraphs.py  generate_readme.txt  output.txt  run.py
.cargo/: config.toml
.github/workflows/: rust.yml  sync_upstream.yml
app_data/face/: 0.txt  100.txt  102.txt  107.txt  110.txt  112.txt  116.txt  122.txt  126.txt  128.txt  129.txt  13.txt  133.txt  134.txt  136.txt  137.txt  138.txt  139.txt  14.txt  142.txt  143.txt  146.txt  147.txt  151.txt  152.txt  153.txt  157.txt  159.txt  16.txt  167.txt  170.txt  175.txt  176.txt  18.txt  183.txt  184.txt  187.txt  189.txt  190.txt  192.txt  (+115 more)
app_data/web/: login.html  not_found.html  rollcall.html  timetable.html  timetable_query.html  vpn.html
benches/: README.md  cold_storage.rs  qrcode_bridge.rs  routing.rs  serialization.rs  storage_concurrency.rs
helper/: Cargo.toml
helper/src/: lib.rs
logs/: xmu_assistant_bot.2026-01-21
omikuji/: senso-ji-stick-data.json
qqdata/face/: 1.txt  101.txt  103.txt  106.txt  108.txt  109.txt  11.txt  111.txt  113.txt  114.txt  115.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  123.txt  124.txt  127.txt  130.txt  131.txt  132.txt  135.txt  140.txt  141.txt  144.txt  145.txt  148.txt  149.txt  150.txt  154.txt  155.txt  156.txt  158.txt  160.txt  161.txt  162.txt  163.txt  164.txt  (+138 more)
scripts/: Dockerfile.alinux3  README.md  build-alinux3.ps1  build.bat  build.ps1  cargo.cmd  cargo.ps1  monitor.ps1
src/: config.rs  lib.rs  logger.rs  main.rs
src/abi/: client.rs  echo.rs  mod.rs  websocket.rs
src/abi/message/: event_body.rs  file.rs  message_body.rs  mod.rs  sender.rs
src/abi/network/: client.rs  mod.rs  napcat.rs
src/abi/router/: context.rs  handler.rs
src/abi/utils/: json.rs
src/api/: mod.rs
src/logic/: classroom.rs  download.rs  echo.rs  fate.rs  flushvpn.rs  github.rs  image.rs  llm.rs  mod.rs  poke.rs  test.rs  timetable.rs
src/web/: mod.rs
xmu_secure_link_docker/: README.md  run_socks5_vpn_check.ps1
xmu_secure_link_docker/docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
(+176 files in other folders)
