[package]
name = "xmu_assistant_bot"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[[bench]]
name = "storage_concurrency"
harness = false

[[bench]]
name = "serialization"
harness = false

[[bench]]
name = "cold_storage"
harness = false

[[bench]]
name = "routing"
harness = false

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
dashmap = "6.1.0"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.147", features = ["raw_value"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.30"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
    "fmt",
    "ansi",
    "registry",
    "std",
] }
helper = { path = "./helper" }
const_format = "0.2.35"
redb = "3.1.0"
bytes = "1.11.0"
bincode = { version = "2.0.1", features = ["serde"] }
reqwest = { version = "0.12.28", features = ["cookies", "json", "stream"] }
fake_user_agent = "0.2.3"
url-macro = "0.2.3"
url = "2.5.7"
smol_str = "0.3.4"
cookie = "0.18.1"
serde_urlencoded = "0.7.1"
ahash = "0.8.12"
rand = { version = "0.9.2", features = ["alloc"] }
soft-aes = "0.2.2"
memchr = "2.7.6"
mimalloc = "0.1.48"
axum = "0.8.8"
mime_guess = "2.0.5"
futures = "0.3.31"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
tokio-util = "0.7.18"
genai = "0.5.0"
quick-xml = { version = "0.38.4", features = ["serde", "serialize", "tokio"] }
phf = "0.13.1"
sha2 = "0.10.9"
hnsw_rs = "0.3.3"
arc-swap = { version = "1.8.0", features = ["serde"] }
scraper = "0.25.0"
ego-tree = "0.10.0"
base64 = "0.22.1"
pulldown-cmark = "0.11.0"
headless_chrome = "1.0.20"
urlencoding = "2.1.3"
chrono = "0.4.43"

[build-dependencies]
base64 = "0.22.1"
phf_codegen = "0.13.1"

[dev-dependencies]
regex = "1.12.2"
criterion = { version = "0.8.1", features = ["async_tokio"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = 0

[profile.release.package."*"]
opt-level = 3
